kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mr-pub-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: europe-north1-docker.pkg.dev/mister-pub/default-docker/frontend:latest
          resources:
            requests:
              memory: '64Mi'
              cpu: '125m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: mr-pub-frontend-service
  annotations:
    networking.gke.io/load-balancer-type: 'Internal'
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
