kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mr-pub-ingress
spec:
  rules:
    - host: adepti.mister.pub
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: mr-pub-server-service
                port:
                  number: 80
